# mcp-apps-record

./: .gitignore  Dockerfile  chuk_decorator_server.py  chuk_manual_server.py  chuk_server.py  chuk_simple_server.py  claude-configs.json  decorator_server.py  fly.toml  manual_server.py  pyproject.toml  server.py  simple_server.py
mcp_apps_record.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
