[project]
name = "mcp-apps-record"
version = "0.1.0"
description = "Sample MCP servers for the MCP Apps video"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "chuk-view-schemas[fastmcp]>=0.1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

# chuk-view-schemas is not yet on PyPI — resolve from local monorepo
[tool.uv.sources]
chuk-view-schemas = { path = "../chuk-ai/chuk-mcp-ui/chuk-view-schemas", editable = true }
